Finished basic email subscription pop-up widget

--- a/src/views/subscribe.html
+++ b/src/views/subscribe.html
@@ -1,4 +1,8 @@
-<div class="js-widget-overlay">
-</div>
-<div class="js-widget-dialog">
+<div id="popup-form" class="popup-form" style="display: flex;">
+    <form id="email-form" class="email-form">
+        <p class="channel-slug">Channel: loading...</p>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br>
+        <input type="submit" value="Submit">
+    </form>
 </div>
