--- a/src/views/subscribe.css
+++ b/src/views/subscribe.css
@@ -1,21 +1,17 @@
-.js-widget-overlay {
-  z-index: 10001;
+.popup-form {
   position: fixed;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  opacity: 0.8;
-  background-color: #000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.js-widget-dialog {
-  position: fixed;
-  z-index: 10002;
-  background: #fff;
-  left: 50%;
-  top: 30%;
-  margin: 0 0 0 -120px;
-  width: 200px;
-  padding: 10px 20px;
-  border: solid 1px #333;
+
+.email-form {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
 }
